tests/operator/greater_string_num.out
[31merror[error]: unsupported operand type(s) for >: 'str' and 'number'
----- Traceback -----
  ┌─ <unknown>:1:11
  | 
1 | print("1" > 1) # False
  |            ^
[0m